grid horizontal scroll fixed

--- a/blocks/places-grid/places-grid.css
+++ b/blocks/places-grid/places-grid.css
@@ -1,19 +1,7 @@
 .places-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     gap: 20px 17px;
     padding: 47px 0 0 0;
     justify-items: center;
-}
-
-@media screen and (max-width: 880px) {
-    .places-grid {
-        grid-template-columns: 1fr 1fr;
-    }
-}
-
-@media screen and (max-width: 580px) {
-    .places-grid {
-        grid-template-columns: 1fr;
-    }
 }
